Bug 158039 - EDITING fix cycle case on a selected sentence during change tracking
Summary: EDITING fix cycle case on a selected sentence during change tracking
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2023-11-02 11:51 UTC by László Németh
Modified: 2023-12-17 08:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2023-11-02 11:51:16 UTC
Description:
cycle case worked only selected multiple words, but not selections end in punctuation, e.g. sentences or other non-words. Also capitalized words cause problem during cycle case, where the capitalized end word of the selection is skipped from change tracking, and the next cycles will skip the last word from cycle case.

Steps to Reproduce:
1. Select a sentence with the ending punctuation, e.g. by 3 clicks on it.
2. Enable Track Changes.
3. Cycle case, e.g. by pressing Shift-F3 twice. 

Actual Results:
E.g. doubling the words: "Integer sodalessodales tincidunttincidunt tristiquetristique."


Expected Results:
Cycle case


Reproducible: Always


User Profile Reset: No

Additional Info:
See Bug 157667.
Comment 1 Commit Notification 2023-11-02 23:54:05 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e266d5902439f34bc5559d6871f8c9fd6e579bb

tdf#158039 sw track changes: fix cycle case of selected sentences

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.